# Lionyx-E

./: .gitignore  README.md  config.json  pyproject.toml  run_weekly_report.py  test.py  test_packages.py
Exercises/: Day 1 Exercises  Day 2 Exercises  day1_salary_estimator.py  day1_user_input.py  day1_variables.py  day1_vat_calculation.py  day2_data_entry_rule_logic.py  day2_simple_automation_decision  day3_dictionary.py  day3_list.py  day3_tuples.py  day4_age_calculation.py  day4_dollar_to_rands.py  day4_scope_demonstartion.py.py  day4_welcoming_message.py
Lessons/: day3_lesson2_Dictionaries.py  day3_lessson3_tuples  day3_lists_lesson.py  day4_lesson_functions.py
mini projects/: day1_portfolio  day2_conditionals.py  day3_student_records.py  day4_challenge_cash_withdrawal.py
output/: health.txt
weekly_auto_reporting.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
weekly_report/: .gitignore  __init__.py  __main__.py  cli.py  config.py  emailer.py  ingest.py  kpis.py  logging_setup.py  monitor.py  pipeline.py  processing.py  report.py
